--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap&effect=anaglyph");
+@import url("https://fonts.googleapis.com/css2?family=Righteous&family=Roboto&display=swap");
 body {
   margin: 0;
 }
@@ -22,6 +22,33 @@ h1 {
   font-size: 45pt;
   color: #FFEB50;
   text-shadow: 0 2px 2px #4486d1, -2px 5px 1px #44b5d1, -6px 11px 0px #44c0d1;
+}
+
+nav {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.cta {
+  width: 50%;
+  height: 30pt;
+}
+.cta-btn {
+  list-style: none;
+  background-color: rgba(255, 255, 255, 0.4);
+  color: #449DD1;
+  border-radius: 15px;
+  margin: 10pt;
+  font-family: "Roboto", sans-serif;
+  font-size: 15pt;
+  padding: 10px;
+}
+.cta-btn a {
+  text-decoration: none;
+}
+.cta-btn a:visited {
+  color: #449DD1;
 }
 
 .footer-container {
