--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,8 @@ body {
 
 h1 {
   font-family: "Righteous", cursive;
+  color: #FFEB50;
+  text-shadow: 0 2px 2px #4486d1, -2px 5px 1px #44b5d1, -6px 11px 0px #44c0d1;
 }
 
 .apply-grad {
@@ -17,6 +19,30 @@ h1 {
   overflow: auto;
 }
 
+header {
+  background: linear-gradient(to left, #FFEB50, #00CF9C, #449DD1);
+}
+header .h-lg {
+  margin-top: 0%;
+  font-size: 30pt;
+}
+header ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  top: 0;
+}
+header ul li {
+  list-style: none;
+  display: inline-block;
+  margin-left: 90%;
+}
+header ul a {
+  float: right;
+  text-decoration: none;
+  color: #00CF9C;
+}
+
 .cta {
   padding: 10%;
   text-align: center;
@@ -27,9 +53,12 @@ h1 {
   text-shadow: 0 2px 2px #4486d1, -2px 5px 1px #44b5d1, -6px 11px 0px #44c0d1;
 }
 .cta-text {
+  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 10px 10px 8px #000;
+  border-radius: 15px;
   font-family: "Roboto", sans-serif;
   font-size: 18pt;
-  padding-top: 10%;
+  padding: 10% 5% 10% 5%;
   line-height: 1.5em;
 }
 .cta-buttons {
@@ -56,6 +85,48 @@ h1 {
   box-shadow: 3px 5px 8px #000 inset;
 }
 
+.form {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  overflow: auto;
+  text-align: center;
+  padding: 20%;
+}
+.form h2 {
+  font-family: "Righteous", cursive;
+  color: #FFEB50;
+}
+.form-container {
+  width: 100%;
+  height: 100%;
+  background-color: #449DD1;
+  padding: 15pt;
+  overflow: auto;
+  border-radius: 15px;
+  box-shadow: 10px 10px 8px #000;
+}
+.form-input {
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  margin: 10pt;
+  background-color: rgba(255, 255, 255, 0.4);
+  border: none;
+  border-radius: 15px;
+}
+.form-input:active {
+  background-color: white;
+}
+.form button {
+  border-radius: 15px;
+  border: none;
+  background-color: #FFEB50;
+  color: #449DD1;
+}
+
+.footer {
+  padding-top: 15pt;
+}
 .footer-container {
   position: fixed;
   bottom: 0;
@@ -63,15 +134,15 @@ h1 {
 
 @media only screen and (min-width: 414px) {
   .cta-buttons {
-    margin-top: 20%;
+    margin-top: 30%;
+  }
+  .cta-btn {
+    margin-top: 15%;
   }
 }
 @media only screen and (min-width: 799px) {
   .cta-title {
     font-size: 50pt;
-  }
-  .cta-text {
-    padding-top: 0;
   }
 }
 @media only screen and (min-width: 1228px) {
@@ -79,6 +150,6 @@ h1 {
     font-size: 75pt;
   }
   .cta-text {
-    font-size: 55pt;
+    font-size: 45px;
   }
 }
