--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -18,6 +18,8 @@ body {
 
 h1 {
     font-family: $fancy-font;
+        color: $yellow;
+        text-shadow: $pop-shadow;
 }
 
 .apply-grad {
@@ -28,6 +30,35 @@ h1 {
     align-content: center;
     justify-content: center;
     overflow: auto;
+   
+}
+
+header {
+    background: linear-gradient(to left, $yellow, $green, $blue );
+    
+    .h-lg {
+        margin-top: 0%;
+        font-size: 30pt;
+    }
+
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        top: 0;
+    li {
+        list-style: none;
+        display: inline-block;
+        margin-left: 90%;
+    }
+    a {
+        float: right;
+        text-decoration: none;
+        color: $green;
+    }
+
+}
+   
 }
 
 .cta {
@@ -41,12 +72,17 @@ h1 {
     }
     
     &-text {
+        background-color: rgba(255,255,255,0.3);
+        box-shadow: 10px 10px 8px #000;
+        border-radius: 15px;
         font-family: $reg-text;
         font-size: 18pt;
-        padding-top: 10%;
+        padding: 10% 5% 10% 5%;
         line-height: 1.5em;
         //text-shadow: 10px 10px 8px #000;
     }
+
+    
 
     &-buttons {
         margin-top: 40%;
@@ -76,7 +112,50 @@ h1 {
     }
 }
 
+.form {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    overflow: auto;
+    text-align: center;
+    padding: 20%;
+    h2 {
+        font-family: $fancy-font;
+        color: $yellow;
+    }
+    &-container {
+        width: 100%;
+        height: 100%;
+        background-color: $blue;
+        padding: 15pt;
+        overflow: auto;
+        border-radius: 15px;
+        box-shadow: 10px 10px 8px #000;
+    }
+
+    &-input {
+        text-align: center;
+        font-family: $reg-text;
+        margin: 10pt;
+        background-color:  rgba(255,255,255,0.4);
+        border: none;
+        border-radius: 15px;
+
+        &:active {
+            background-color: white;
+        }
+    }
+
+    button {
+        border-radius: 15px;
+        border: none;
+        background-color: $yellow;
+        color: $blue;
+    }
+}
+
 .footer {
+    padding-top: 15pt;
 
      &-container {
         position: fixed;
@@ -92,7 +171,11 @@ h1 {
     .cta {
         &-buttons {
             //fix the height between buttons and text
-            margin-top: 20%;
+            margin-top: 30%;
+        }
+
+        &-btn {
+            margin-top: 15%;
         }
     }
 }
@@ -105,9 +188,7 @@ h1 {
             font-size: 50pt;
         }
 
-        &-text {
-            padding-top: 0;
-        }
+       
     }
 }
 
@@ -119,7 +200,7 @@ h1 {
             font-size: 75pt;
         }
         &-text {
-            font-size: 55pt
+            font-size: 45px
         }
     }
 }
