--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -39,6 +39,7 @@ header {
     .h-lg {
         margin-top: 0%;
         font-size: 30pt;
+        padding: 10pt;
     }
 
     ul {
@@ -55,6 +56,7 @@ header {
         float: right;
         text-decoration: none;
         color: $green;
+        padding: 10pt;
     }
 
 }
@@ -118,7 +120,7 @@ header {
     justify-content: center;
     overflow: auto;
     text-align: center;
-    padding: 20%;
+    padding: 10%;
     h2 {
         font-family: $fancy-font;
         color: $yellow;
@@ -140,6 +142,7 @@ header {
         background-color:  rgba(255,255,255,0.4);
         border: none;
         border-radius: 15px;
+        width: 75%;
 
         &:active {
             background-color: white;
