created add set component

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -9,8 +9,8 @@ $pop-shadow: 0 2px 2px #4486d1,
 -6px 11px 0px #44c0d1;
 //media breakpoints
 
-
 @import url('https://fonts.googleapis.com/css2?family=Righteous&family=Roboto&display=swap');
+@import "../node_modules/bootstrap/scss/bootstrap";
 
 body {
     margin: 0;
