refactored navbar to bootstrap, added more mediaqueries

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -36,27 +36,27 @@ h1 {
 header {
     background: linear-gradient(to left, $yellow, $green, $blue );
     
+    
     .h-lg {
         margin-top: 0%;
         font-size: 30pt;
         padding: 10pt;
     }
 
+    .navbar-nav {
+        padding-left: 70%;
+    }
+
     ul {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        top: 0;
-    li {
+        li {
+            float: right;
         list-style: none;
-        display: inline-block;
-        margin-left: 90%;
     }
     a {
-        float: right;
         text-decoration: none;
         color: $green;
-        padding: 10pt;
+        padding: 10px;
+    
     }
 
 }
@@ -158,8 +158,8 @@ header {
 }
 
 .footer {
-    padding-top: 15pt;
-
+    margin-top: 50px;
+    width: 100%;
      &-container {
         position: fixed;
         bottom: 0;
@@ -174,13 +174,20 @@ header {
 //large phones
 @media only screen and (min-width: 414px) {
     .cta {
+        
+        h1 {
+            font-size: 60pt;
+            padding-bottom: 10%;
+        }
         &-buttons {
             //fix the height between buttons and text
-            margin-top: 30%;
+            margin-top: 20%;
+            padding-bottom: 10px;
         }
 
         &-btn {
             margin-top: 15%;
+            width: 90%;
         }
     }
 }
@@ -193,7 +200,12 @@ header {
             font-size: 50pt;
         }
 
-       
+       &-buttons {
+            margin-top: 10%;
+       }
+       &-btn {
+           margin-top: 5%;
+       }
     }
 }
 
@@ -201,11 +213,11 @@ header {
 @media only screen and (min-width: 1228px) {
 
     .cta {
-        &-title {
-            font-size: 75pt;
+        h1 {
+            font-size: 100px;
         }
         &-text {
-            font-size: 45px
+            font-size: 30pt
         }
     }
 }
