--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,7 +36,7 @@ header ul a {
   overflow: auto;
   justify-content: center;
   background: linear-gradient(to right, #FFEB50, #00CF9C, #449DD1);
-  height: 80vh;
+  height: 70vh;
   padding: 10%;
 }
 .cta-title {
@@ -78,12 +78,16 @@ header ul a {
   box-shadow: 3px 5px 8px #000 inset;
 }
 
-.carosuel {
-  height: 20vh;
+.testimonials {
+  text-align: center;
 }
-.carosuel-item {
-  background-color: #FFEB50;
-  padding: 20px 0px 20px 0px;
+.testimonials .card {
+  margin: 1em;
+  height: 150px;
+  width: 150px;
+}
+.testimonials .card-group {
+  padding: 1em;
 }
 
 .form {
@@ -140,24 +144,10 @@ header ul a {
     font-size: 60pt;
     padding-bottom: 10%;
   }
-  .cta-buttons {
-    margin-top: 20%;
-    padding-bottom: 10px;
-  }
-  .cta-btn {
-    margin-top: 15%;
-    width: 90%;
-  }
 }
 @media only screen and (min-width: 799px) {
   .cta-title {
     font-size: 50pt;
-  }
-  .cta-buttons {
-    margin-top: 10%;
-  }
-  .cta-btn {
-    margin-top: 5%;
   }
 }
 @media only screen and (min-width: 1228px) {
