--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -59,8 +59,7 @@ header {
     overflow: auto;
     justify-content: center;
     background: $gradient;
-    height: 80vh;
-
+    height: 70vh;
     padding: 10%;
     &-title {
         font-size: 35pt;
@@ -110,12 +109,20 @@ header {
     }
 }
 
-.carosuel {
-    height: 20vh;
-  &-item {
-      background-color: $yellow;
-      padding: 20px 0px 20px 0px;
-  }
+.testimonials {
+
+    text-align: center;
+    .card {
+        margin: 1em;
+        height: 150px;
+        width: 150px;
+
+        &-group {
+            padding: 1em;
+        }
+
+
+    }
 }
 
 .form {
@@ -183,16 +190,7 @@ header {
             font-size: 60pt;
             padding-bottom: 10%;
         }
-        &-buttons {
-            //fix the height between buttons and text
-            margin-top: 20%;
-            padding-bottom: 10px;
-        }
-
-        &-btn {
-            margin-top: 15%;
-            width: 90%;
-        }
+      
     }
 }
 
@@ -204,12 +202,7 @@ header {
             font-size: 50pt;
         }
 
-       &-buttons {
-            margin-top: 10%;
-       }
-       &-btn {
-           margin-top: 5%;
-       }
+      
     }
 }
 
